--- a/crm-backend/package.json
+++ b/crm-backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only app.ts",
+    "prisma:seed": "ts-node ./prisma/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,13 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "knex": "^3.1.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.13",
+    "prisma": "^6.11.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
