--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   db:
     image: postgres:15
@@ -11,5 +12,44 @@ services:
       - '5432:5432'
     volumes:
       - db_data:/var/lib/postgresql/data
+
+  backend:
+    build:
+      context: ./ # Cambia el contexto al directorio raíz
+      dockerfile: ./crm-backend/Dockerfile
+    container_name: crm-backend
+    restart: always
+    ports:
+      - '3001:3000' # Puerto externo:interno
+      - '5555:5555'
+    environment:
+      DATABASE_URL: postgresql://crmuser:crmpass@db:5432/crm
+    volumes:
+      - ./crm-backend:/app/crm-backend
+      - ./shared:/app/shared
+      - /app/crm-backend/node_modules
+    working_dir: /app/crm-backend
+    depends_on:
+      - db
+  
+  frontend:
+    build:
+      context: ./ # Cambia el contexto al directorio raíz
+      dockerfile: ./frontend/Dockerfile
+    container_name: crm-frontend
+    restart: always
+    ports:
+      - '5173:5173'
+    volumes:
+      - ./frontend:/app/frontend
+      - ./shared:/app/shared
+      - /app/frontend/node_modules
+    working_dir: /app/frontend
+    depends_on:
+      - backend
+    environment:
+      # Para comunicación interna entre contenedores
+      - VITE_API_URL=http://backend:3000
+
 volumes:
   db_data:
